--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "map",
   "version": "0.1.1",
   "devDependencies": {
+    "chai": "~1.8.1",
     "component": "~0.17.0",
     "LiveScript": "~1.2.0",
     "mocha": "~1.12.0",
-    "should": "~1.2.2"
+    "uglify-js": "~2.4.6"
+  },
+  "scripts": {
+  	"install": "component-install",
+    "build": "component-build --standalone Map --name map --out . && uglifyjs map.js --output map.min.js",
+    "test": "component-build --dev --standalone Map --name index && mocha --recursive --compilers ls:LiveScript --bail"
   }
 }
