--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "map",
+  "name": "wryk-map",
+  "description": "map data structure",
   "version": "1.0.0",
-  "devDependencies": {
-    "chai": "~1.8.1",
-    "component": "~0.17.0",
-    "LiveScript": "~1.2.0",
-    "mocha": "~1.12.0",
-    "uglify-js": "~2.4.6"
+  "keywords": [
+    "map",
+    "data",
+    "structure"
+  ],
+  "main": "index.js",
+  "dependencies": {
+    "matthewp-is": "git://github.com/npmcomponent/matthewp-is.git"
   },
-  "scripts": {
-  	"install": "component-install",
-    "build": "component-build --standalone Map --name map --out . && uglifyjs map.js --output map.min.js",
-    "test": "component-build --dev --standalone Map --name index && mocha --recursive --compilers ls:LiveScript --bail"
-  }
+  "license": "MIT"
 }
